recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: type mismatch;
 found   : Double
 required: Int
	snowFlake(length/3.0, length)
                        ^